# figwatch

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  package.json  pyproject.toml  server.py
.github/workflows/: ci.yml
FigWatch.app/Contents/Resources/: FigWatch.py  watcher.py
FigWatch.app/Contents/Resources/handlers/: generic.py
FigWatch.app/Contents/Resources/lib/python3.9/handlers/: __init__.py  tone.py  (+2 more)
app/: FigWatch.py  build.sh  setup.py
docs/: docker.md  domain-logic.md
docs/adr/: 001-fail-fast-configuration.md  002-domain-driven-design.md
figwatch/: __init__.py  ack_updater.py  domain.py  feedback.py  gateway.py  log_context.py  logging_config.py  metrics.py  ports.py  processor.py  queue_stats.py  services.py  skills.py  tracing.py  trigger_config.py  watcher.py
figwatch/handlers/: __init__.py
figwatch/providers/: figma.py  pg.py
figwatch/providers/ai/: __init__.py  anthropic.py  claude_cli.py  gemini.py
macos/: AppIcon.icns  FigWatch.py  setup.py
migrations/: 001_initial.sql
tests/: test_ack_updater.py  test_bounded_set.py  test_domain.py  test_feedback.py  test_figma_rate_limit.py  test_gateway.py  test_gateway_hardening.py  test_logging_context.py  test_metrics.py  test_ports.py  test_providers_ai.py  test_providers_figma.py  test_queue_stats.py  test_rate_limit.py  test_server_config.py  test_services.py  test_skills.py  test_token_expired.py  test_trigger_config.py
watcher/: .env.example  index.js  package-lock.json  package.json  router.js  utils.js
watcher/handlers/: tone.js  ux.js
